automatically backed up by learn

--- a/views/results.erb
+++ b/views/results.erb
@@ -10,7 +10,7 @@
   
 
 
-<% fortunes = ["good", "bad", "good", %>
+<% fortunes = ["good", "bad", "good",] %>
 <% if fortunes.sample == "bad" %>
 <h1><%= "It was a beautiful day @ KWK. Unfotunatelly for #{@name}, things weren't looking so bright... :(" %></h1>
 <h3>
