automatically backed up by learn

--- a/views/results.erb
+++ b/views/results.erb
@@ -10,7 +10,7 @@
   
 
 
-<% fortunes = ["good", "bad", "bad"] %>
+<% fortunes = ["bad", "bad"] %>
 <% if fortunes.sample == "bad" %>
 <h1><%= "It was a beautiful day @ KWK. Unfotunately for #{@name}, things weren't looking so bright... :(" %></h1>
 <h3>
